# vello_bench2

./: Cargo.toml  README.md  ab.sh  serve.sh
.github/workflows/: deploy.yml
src/: backend.rs  capability.rs  fps.rs  harness.rs  lib.rs  main.rs  resource_store.rs  rng.rs  storage.rs  ui.rs
src/backend/: canvas2d.rs  cpu.rs  hybrid.rs  mod.rs  pathfinder.rs
src/scenes/: clip.rs  filter_layers.rs  mod.rs  polyline.rs  rect.rs  strokes.rs  svg.rs  text.rs
web/: ab.html  index.html
