[package]
name = "vello_bench2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["hybrid"]
hybrid = ["dep:vello_hybrid"]
cpu = ["dep:vello_cpu"]

[dependencies]
bytemuck = "1.25"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
smallvec = {version = "1.15.1" }
skrifa = { version = "0.40.0" }
usvg = { version = "0.45.1" }
vello_common = { git = "https://github.com/linebender/vello", rev = "5796226b" }
vello_hybrid = { git = "https://github.com/linebender/vello", rev = "5796226b", features = ["webgl", "text"], optional = true }
vello_cpu = { git = "https://github.com/linebender/vello", rev = "5796226b", features = ["text"], optional = true }
js-sys = "0.3.83"
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "CssStyleDeclaration",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "CanvasRenderingContext2d",
    "ImageData",
    "Performance",
    "Storage",
    "Event",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "AddEventListenerOptions",
    "EventTarget",
    "Node",
    "TouchEvent",
    "TouchList",
    "Touch",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cargo-run-wasm = "0.4.0"

[profile.instrument]
inherits = "release"
debug = true
strip = "none"