[package]
name = "vello_bench2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["hybrid"]
hybrid = ["dep:vello_hybrid"]
cpu = ["dep:vello_cpu"]
pathfinder = [
    "dep:pathfinder_canvas",
    "dep:pathfinder_color",
    "dep:pathfinder_geometry",
    "dep:pathfinder_renderer",
    "dep:pathfinder_resources",
    "dep:pathfinder_webgl",
]

[dependencies]
bytemuck = "1.25"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
smallvec = {version = "1.15.1" }
skrifa = { version = "0.40.0" }
usvg = { version = "0.45.1" }
vello_common = { git = "https://github.com/linebender/vello", rev = "c08ba6e1" }
vello_hybrid = { git = "https://github.com/linebender/vello", rev = "c08ba6e1", features = ["webgl", "text"], optional = true }
vello_cpu = { git = "https://github.com/linebender/vello", rev = "c08ba6e1", features = ["text"], optional = true }
pathfinder_canvas = { git = "https://github.com/servo/pathfinder", branch = "main", optional = true }
pathfinder_color = { git = "https://github.com/servo/pathfinder", branch = "main", optional = true }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder", branch = "main", optional = true }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder", branch = "main", optional = true }
pathfinder_resources = { git = "https://github.com/servo/pathfinder", branch = "main", optional = true }
pathfinder_webgl = { git = "https://github.com/servo/pathfinder", branch = "main", optional = true }
js-sys = "0.3.83"
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "CssStyleDeclaration",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "CanvasWindingRule",
    "ImageData",
    "Performance",
    "Storage",
    "Event",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "AddEventListenerOptions",
    "EventTarget",
    "Node",
    "TouchEvent",
    "TouchList",
    "Touch",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cargo-run-wasm = "0.4.0"

[profile.instrument]
inherits = "release"
debug = true
strip = "none"